crates/aiken-lang/src/parser/expr/snapshots/int_hex_bytes.snap
---
source: crates/aiken-lang/src/parser/expr/int.rs
description: "Code:\n\n0x01"
---
Int {
    location: 0..4,
    value: "1",
    base: Hexadecimal,
}
