crates/aiken-lang/src/parser/expr/snapshots/int_literal.snap
---
source: crates/aiken-lang/src/parser/expr/int.rs
description: "Code:\n\n1"
---
Int {
    location: 0..1,
    value: "1",
    base: Decimal {
        numeric_underscore: false,
    },
}
