crates/aiken-lang/src/parser/expr/snapshots/list_spread.snap
---
source: crates/aiken-lang/src/parser/expr/list.rs
description: "Code:\n\n[1, 2, ..[]]"
---
List {
    location: 0..12,
    elements: [
        Int {
            location: 1..2,
            value: "1",
            base: Decimal {
                numeric_underscore: false,
            },
        },
        Int {
            location: 4..5,
            value: "2",
            base: Decimal {
                numeric_underscore: false,
            },
        },
    ],
    tail: Some(
        List {
            location: 9..11,
            elements: [],
            tail: None,
        },
    ),
}
